licensingservices/k8s/license-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: license-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /license
        backend:
          serviceName: license-service
          servicePort: 8080
